# kws_code

./: .gitignore  kws_fastapi_client.py  kws_fastapi_server.py  kws_local.py  kws_local_vad.py  pyproject.toml  speaker_file.txt  vad-microphone.py
local/: kws__vad_asr_local.py  kws_local.py  kws_vad_asr_local.py
websocket/: kws_fastapi_websocket_server.py  kws_websocket_client.py
websocket/kws/: kws_fastapi_websocket_server.py  kws_websocket_client.py
websocket/kws_vad_asr/: kws_vad_asr_server.py  kws_vad_asr_server_web.py
websocket/kws_vad_asr_tts/: kws_vad_asr_client.py  kws_vad_asr_server.py  kws_vad_asr_server_web.py  kws_vad_asr_server_web_play.py
websocket/kws_vad_asr_tts_speaker_identification/: kws_vad_asr_server_web.py  web_clinent.html
模型下载文档/: ASR模型下载.md  KWS模型下载.md  TTS模型下载.md  VAD模型下载.md  声纹识别模型下载.md
